# veritas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  adaptive_compute.py  basic_research.py  basic_research_demo.py  catts_demo.py  integrated_pipeline.py  integrated_pipeline_demo.py  verified_research.py
tests/: __init__.py  test_allocation.py  test_cli.py  test_core.py  test_integrator.py  test_uncertainty.py  test_verification.py
veritas/: __init__.py  __main__.py  cli.py
veritas/agents/: __init__.py  researcher.py
veritas/allocation/: __init__.py  catts.py
veritas/core/: __init__.py  agent.py  browser.py  integrator.py  uncertainty.py
veritas/refinement/: __init__.py  igrpo.py
veritas/topology/: __init__.py  router.py
veritas/verification/: __init__.py  checklist.py
